--- a/git-sources/small/one-service-app.yaml
+++ b/git-sources/small/one-service-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: product-c-sm
+  name: one-service-app
   annotations:
     "codefresh.io/product": one-service-app
   finalizers:
